# strava_app

./: .env.example  .gitignore  00_main.py  01_test_connection.py  02_test_refresh_token.py  README.md  dockerfile  pyproject.toml
app/: callbacks.py  layout.py
app/assets/: styles.css
assets/: styles.css
functions/: data_prep.py  model_build.py
strava_app/: 00_main.py  callbacks.py  layout.py
tests/: test_example.py
